[gd_scene load_steps=39 format=2]

[ext_resource path="res://Enemys/Enemy2.gd" type="Script" id=1]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-idle-00.png" type="Texture" id=2]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-idle-01.png" type="Texture" id=3]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-idle-02.png" type="Texture" id=4]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-idle-03.png" type="Texture" id=5]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-hurt-00.png" type="Texture" id=6]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-hurt-01.png" type="Texture" id=7]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-hurt-02.png" type="Texture" id=8]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-attack-00.png" type="Texture" id=9]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-attack-01.png" type="Texture" id=10]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-attack-02.png" type="Texture" id=11]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-attack-03.png" type="Texture" id=12]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-attack-04.png" type="Texture" id=13]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-attack-05.png" type="Texture" id=14]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-00.png" type="Texture" id=15]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-01.png" type="Texture" id=16]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-02.png" type="Texture" id=17]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-03.png" type="Texture" id=18]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-04.png" type="Texture" id=19]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-05.png" type="Texture" id=20]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-06.png" type="Texture" id=21]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-07.png" type="Texture" id=22]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-08.png" type="Texture" id=23]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-die-09.png" type="Texture" id=24]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-move-00.png" type="Texture" id=25]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-move-01.png" type="Texture" id=26]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-move-02.png" type="Texture" id=27]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-move-03.png" type="Texture" id=28]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-move-04.png" type="Texture" id=29]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-move-05.png" type="Texture" id=30]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-summon-00.png" type="Texture" id=31]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-summon-01.png" type="Texture" id=32]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-summon-02.png" type="Texture" id=33]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-summon-03.png" type="Texture" id=34]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-summon-04.png" type="Texture" id=35]
[ext_resource path="res://sprites/Enemies/Necromancer/Individual Sprites/necromancer-summon-05.png" type="Texture" id=36]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "hurt",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "att",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "die",
"speed": 9.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "cast",
"speed": 12.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8.65501, 19.2435 )

[node name="Enemy2" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( -20.5744, -10.8268 )
frames = SubResource( 1 )
animation = "att"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="SeePlayer" type="RayCast2D" parent="." index="2"]

rotation = 1.5708
scale = Vector2( 1, 5.52752 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 16
_sections_unfolded = [ "Transform" ]

[node name="Position2D" type="Position2D" parent="." index="3"]

position = Vector2( -30, -1.82 )
_sections_unfolded = [ "Transform" ]

[node name="attTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="attTimer" to="." method="_on_attTimer_timeout"]


